networking/network-policy/network-policy-demo/05_allow-from-burns-simpson.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-burns
  namespace: simpson
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: burns
  policyTypes:
  - Ingress
